--- a/config.json
+++ b/config.json
@@ -11,6 +11,6 @@
         "port": 5000
     },
     "sitemap": {
-        "url": "https://devhtml.visibleone.io/devhtml/"
+        "url": "https://kyawzayarwin.com"
     }
 }
