--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "scripts": {
     "dev": "gulp",
-    "build": "NODE_ENV=production gulp",
-    "build:wp": "gulp build:wp"
+    "build": "NODE_ENV=production gulp"
   },
   "engines": {
     "node": ">=18.0.0"
